--- a/ESSSSDA22-Day3/index.html
+++ b/ESSSSDA22-Day3/index.html
@@ -277,20 +277,14 @@ Series: mdeaths, fdeaths
 Model: VAR(2) w/ mean 
 
 Coefficients for mdeaths:
-      lag(mdeaths,1)  lag(fdeaths,1)  lag(mdeaths,2)  lag(fdeaths,2)
-              0.9610          0.3340          0.1149         -1.3379
-s.e.          0.3409          0.8252          0.3410          0.7922
-      constant
-      443.8492
-s.e.  124.4608
+      lag(mdeaths,1)  lag(fdeaths,1)  lag(mdeaths,2)  lag(fdeaths,2)  constant
+              0.9610          0.3340          0.1149         -1.3379  443.8492
+s.e.          0.3409          0.8252          0.3410          0.7922  124.4608
 
 Coefficients for fdeaths:
-      lag(mdeaths,1)  lag(fdeaths,1)  lag(mdeaths,2)  lag(fdeaths,2)
-              0.3391          0.2617         -0.0601         -0.2691
-s.e.          0.1450          0.3510          0.1450          0.3369
-      constant
-      145.0546
-s.e.   52.9324
+      lag(mdeaths,1)  lag(fdeaths,1)  lag(mdeaths,2)  lag(fdeaths,2)  constant
+              0.3391          0.2617         -0.0601         -0.2691  145.0546
+s.e.          0.1450          0.3510          0.1450          0.3369   52.9324
 
 Residual covariance matrix:
          mdeaths  fdeaths
