--- a/CMF-Week-2/img/Tufte-HT-CI.html
+++ b/CMF-Week-2/img/Tufte-HT-CI.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Robert W. Walker" />
 
-<meta name="date" content="2022-08-29" />
+<meta name="date" content="2022-09-05" />
 
 <title>The Duality of Hypothesis Testing and Confidence Intervals</title>
 
@@ -275,7 +275,7 @@ if (window.hljs) {
 Confidence Intervals</h1>
 <h3 class="subtitle">Proportions</h3>
 <h4 class="author">Robert W. Walker</h4>
-<h4 class="date">2022-08-29</h4>
+<h4 class="date">2022-09-05</h4>
 
 
 
@@ -1170,12 +1170,9 @@ Phone.No &lt;- Churn %&gt;% filter(PhoneService==&quot;No&quot;)</code></pre>
 </div>
 <div id="more-generally" class="section level2">
 <h2>More Generally</h2>
-<p>The base data file <code>Churn</code> is available here and you can
-use Data &gt; View and the filter tick box to choose your own features
-to examine if you so choose. Radiant’s state file containing this part
-is on WISE. To save them to the markdown, you will have to copy the code
-and remember to only work with them after their code is issued. Knitting
-reads top to bottom.</p>
+<p>The base data file <code>Churn</code> is available <a href="https://raw.githubusercontent.com/robertwwalker/DADMStuff/master/WA_Fn-UseC_-Telco-Customer-Churn.csv">here
+as a .csv file</a> and you can use Data &gt; View and the filter tick
+box to choose your own features to examine if you so choose.</p>
 <p>You can, of course, work with the Code examples above on the filtered
 data or the tables.</p>
 </div>
