Update week-2 of CWD

--- a/CWD-Week-2/index-speaker.html
+++ b/CWD-Week-2/index-speaker.html
@@ -460,7 +460,20 @@ Robert W. Walker
 </section>
 <section id="on-a-portfolio" class="slide level2">
 <h2>On a Portfolio</h2>
-<p>Preliminary questions: 1. where do you want to host it? Do you need a fancy domain name? 2. Setting up rendering? 3. Templates - [Alison Presmanes Hill’s pdx-rug workshop]](https://github.com/apreshill/blogdown-workshop). You can pull the template. - Quarto websites and blogs</p>
+<p>Preliminary questions:</p>
+<ol type="1">
+<li class="fragment">where do you want to host it? Do you need a fancy domain name?</li>
+<li class="fragment">Setting up rendering?</li>
+<li class="fragment">Templates
+<ul>
+<li class="fragment"><a href="https://github.com/apreshill/blogdown-workshop">Alison Presmanes Hill’s pdx-rug workshop</a>. You can pull the template.</li>
+<li class="fragment">Also, quarto websites and blogs.</li>
+</ul></li>
+</ol>
+</section>
+<section id="a-very-quick-one" class="slide level2">
+<h2>A Very Quick One</h2>
+<p>I can get a something up in only a few minutes. Let’s walk through that.</p>
 </section>
 <section id="for-next-time" class="slide level2">
 <h2>For Next Time</h2>
