--- a/CWD-Week-2/index-speaker.html
+++ b/CWD-Week-2/index-speaker.html
@@ -479,6 +479,7 @@ Robert W. Walker
 <h2>For Next Time</h2>
 <p>Let’s build at least a barebones portfolio. I don’t care which method you choose though I have used <code>blogdown</code> for years and am somewhat new to <code>quarto</code>.</p>
 <p>If you want to use blogdown, I would strongly encourage you to basically follow along <a href="https://www.apreshill.com/slides/blogdown-workshop-slides.html">here</a>. It is a nice walkthrough.</p>
+<p>Partly for next week’s assignment, browse the tidyTuesday archives, find a visualization, and try a modification of it in a post. Or some other post of interest. So that we know how to extend it. We are going to add to it from here.</p>
 
 <img src="AGSMlogo.jpeg" class="slide-logo r-stretch"><div class="footer footer-default">
 <p>Communicating With Data: Week 2 (23 Jan 2023)</p>
