--- a/CWD-Week-3/index-speaker.html
+++ b/CWD-Week-3/index-speaker.html
@@ -532,7 +532,8 @@ Robert W. Walker
 <section id="the-pdxrug-talk" class="slide level2">
 <h2>The <code>pdxrug</code> talk</h2>
 <p>Though it is about presentations, all kinds of things can be done.</p>
-</section>
+
+<img data-src="https://robertwwalker.github.io/pdxrug/.png" class="r-stretch quarto-figure-center"><p class="caption">pdxrug</p></section>
 <section id="on-tidytuesday" class="slide level2">
 <h2>on tidyTuesday</h2>
 <p>For next week’s assignment, browse the tidyTuesday archives, find a visualization, and try a modification of it in a post. Or some other post of interest. So that we know how to extend it. We are going to add to it from here.</p>
